Création des jobs de remplissage des tables spark.

--- a/PROD/CONF/MONITORING/compute_spark_global_activity_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_spark_global_activity_daily_status.conf
@@ -31,6 +31,7 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_global_activity_daily_status.hql"
 
-flux.inline.exec-queries += "DELETE FROM MON.GLOBAL_ACTIVITY_DAILY_STATUS WHERE TRANSACTION_DATE = '###SLICE_VALUE###'"
-flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_global_activity_daily_status.hql"
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_GLOBAL_ACTIVITY_DAILY_STATUS DROP PARTITION(TRANSACTION_DATE ='###SLICE_VALUE###')"
+//flux.inline.exec-queries += "DELETE FROM MON.GLOBAL_ACTIVITY_DAILY_STATUS WHERE TRANSACTION_DATE = '###SLICE_VALUE###'"
+flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_global_activity_daily_status.hql"
 
