--- a/PROD/CONF/POPULATE_SPARK/populate-spark-ft-conso-msisdn-day.conf
+++ b/PROD/CONF/POPULATE_SPARK/populate-spark-ft-conso-msisdn-day.conf
@@ -11,19 +11,19 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.spark.setup-var +=  {"key": "step_value", "value": -30}
-flux.spark.setup-var +=  {"key": "spark_table_name", "value": "MON.SPARK_ACTIVATION_ALL_BY_DAY"}
-flux.spark.setup-var +=  {"key": "hive_table_name", "value": "MON.ACTIVATION_ALL_BY_DAY"}
-flux.spark.setup-var +=  {"key": "partition_column", "value": "event_date"}
+flux.spark.setup-var +=  {"key": "step_value", "value": -20}
+flux.spark.setup-var +=  {"key": "spark_table_name", "value": "MON.SPARK_FT_CONSO_MSISDN_DAY"}
+flux.spark.setup-var +=  {"key": "hive_table_name", "value": "MON.FT_CONSO_MSISDN_DAY"}
+flux.spark.setup-var +=  {"key": "p;artition_column", "value": "event_date"}
 
-flux.name = "POPULATE_SPARK_ACTIVATION_ALL_BY_DAY"
+flux.name = "POPULATE_SPARK_FT_CONSO_MSISDN_DAY"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = 0
-flux.slice-end-value = -212
-flux.slice-step-value = -30
+flux.slice-end-value = -150
+flux.slice-step-value = -20
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = -30
 flux.slice-date-format = "yyyy-MM-dd"
