--- a/PROD/CONF/POPULATE_SPARK/populate-spark-sms-usage.conf
+++ b/PROD/CONF/POPULATE_SPARK/populate-spark-sms-usage.conf
@@ -12,17 +12,17 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.spark.setup-var +=  {"key": "step_value", "value": -30}
-flux.spark.setup-var +=  {"key": "spark_table_name", "value": "MON.SPARK_ACTIVATION_ALL_BY_DAY"}
-flux.spark.setup-var +=  {"key": "hive_table_name", "value": "MON.ACTIVATION_ALL_BY_DAY"}
-flux.spark.setup-var +=  {"key": "partition_column", "value": "event_date"}
+flux.spark.setup-var +=  {"key": "spark_table_name", "value": "MON.SPARK_SMS_USAGE"}
+flux.spark.setup-var +=  {"key": "hive_table_name", "value": "MON.SMS_USAGE"}
+flux.spark.setup-var +=  {"key": "partition_column", "value": "transaction_date"}
 
-flux.name = "POPULATE_SPARK_ACTIVATION_ALL_BY_DAY"
+flux.name = "POPULATE_SPARK_SMS_USAGE"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = 0
-flux.slice-end-value = -212
+flux.slice-end-value = -168
 flux.slice-step-value = -30
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = -30
