--- a/PROD/CONF/NOTIFICATION/spark_sms_usage.conf
+++ b/PROD/CONF/NOTIFICATION/spark_sms_usage.conf
@@ -4,7 +4,7 @@ flux.log-level = "ERROR"
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "COMPUTE_SMS_USAGE"
+flux.name = "COMPUTE_SPARK_SMS_USAGE"
 
 flux.has-date-processing = true
 
