--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-data-transfer.conf
@@ -17,8 +17,8 @@ flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_D
 flux.spark.setup-conf += {"key": "table_partition", "value": "TRANSACTION_DATE"}
 
 flux.spark.setup-conf += {"key": "cdr_type", "value": "ZTE_ADJUSTMENT_CDR"}
-flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.IT_ZTE_ADJUSTMENT"}
-flux.spark.setup-conf += {"key": "it_partition_column", "value": "CREATE_DATE"}
+flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.SPARK_IT_ZTE_ADJUSTMENT"}
+flux.spark.setup-conf += {"key": "it_partition_column", "value": "FILE_DATE"}
 flux.spark.setup-conf += {"key": "date_offset", "value": "20"}
 flux.spark.setup-conf += {"key": "flux_type", "value": "PREPAID"}
 flux.spark.setup-conf += {"key": "check_file_regex", "value": "IN_ZTE_CHECK_FILELIST_2"}
