--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
@@ -1,8 +1,8 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 
 flux.spark.setup-conf = []
 
@@ -22,7 +22,7 @@ flux.name = "LOAD_SPARK_FT_SUBSCRIPTION"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -10
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -40,4 +40,3 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_spark_ft_subscription.hql"
-
