--- a/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
@@ -37,4 +37,13 @@ flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
 
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_missing_extract_files.hql"
+flux.inline.post-exec-queries +="INSERT INTO TMP.MISSING_FILES_STATUS  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FOM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
+flux.inline.post-exec-queries +="INSERT INTO MON.MISSING_FILES_STATUS  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+
+flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS3 UNION ALL SELECT 'EXTRACT' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
+
+
 flux.inline.post-exec-queries += "MERGE INTO MON.MISSING_FILES_STATUS AS A USING  (SELECT 'EXTRACT' job_source,if(COUNT(*)=0,'OK','NOK') status,current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE='EXTRACT') as B ON b.job_source = a.job_source and a.ORIGINAL_FILE_DATE = b.ORIGINAL_FILE_DATE WHEN MATCHED  THEN UPDATE SET STATUS = b.STATUS WHEN NOT MATCHED THEN INSERT VALUES (b.job_source,b.status,b.insert_date,'###SLICE_VALUE###') "
