--- a/PROD/CONF/OM/load-spark-ft-om-apgl-transaction.conf
+++ b/PROD/CONF/OM/load-spark-ft-om-apgl-transaction.conf
@@ -31,10 +31,8 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
-
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_OM_APGL_TRANSACTION"
+flux.inline.exec-queries += "INSERT INTO TMP.SPARK_TT_OM_APGL_TRANSACTION VALUES('0', '55840000', '2019-07-01',  '0', 'P2P ON THE FLY ABOUTI-OPERATEUR-CLIENT FINAL', '0', '0', '2651970', '2651970', '0',     '0', '0', '0', '0', '0', '10', '0', '0', '0', '0', '0', '0', '0', '2019-07-04', '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE TMP.SPARK_TT_OM_APGL_TRANSACTION DROP PARTITION(DOCUMENT_DATE='###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_APGL_TRANSACTION/compute_and_insert_spark_tt_om_apgl_transaction.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_APGL_TRANSACTION/compute_and_insert_spark_ft_om_apgl_transaction.hql"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_OM_APGL_TRANSACTION"
-
-
