--- a/PROD/CONF/OM/spark_load-it-om-apgl.conf
+++ b/PROD/CONF/OM/spark_load-it-om-apgl.conf
@@ -1,5 +1,5 @@
 flux.yarn.queue = "PROD"
-flux.log-level = "INFO"
+flux.log-level = "ERROR"
 
 flux.name = "LOAD_IT_OM_APGL"
 
@@ -8,17 +8,17 @@ flux.output-type = "HIVE"
 
 flux.has-date-processing = false
 
-flux.setup-conf += "set mapreduce.input.fileinputformat.split.maxsize=20480000000"
-flux.setup-conf += "set mapreduce.input.fileinputformat.split.minsize.per.node=20480000000"
-flux.setup-conf += "set mapreduce.input.fileinputformat.split.minsize.per.rack=20480000000"
-flux.setup-conf += "set mapreduce.input.fileinputformat.split.minsize.per.rack=20480000000"
-flux.setup-conf += "set hive.exec.dynamic.partition.mode=nonstrict"
-flux.setup-conf += "set hive.exec.dynamic.partition=true"
-flux.setup-conf += "set hive.enforce.bucketing=false"
-flux.setup-conf += "set hive.enforce.sorting=false"
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode", "value": "nonstrict"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
+flux.spark.setup-conf += {"key": "hive.enforce.sorting", "value": "false"}
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/GL_TRX_INTERFACE*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/GL_TRX_INTERFACE/GL_TRX_INTERFACE*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/APGL"
 
 flux.hdfs.move-to-arch = true
@@ -29,8 +29,8 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
-flux.exec-query = "/PROD/SCRIPTS/IT/OM/spark_insert_into_it_om_apgl.sql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_om_apgl.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/IT/OM/spark_insert_it_om_apgl_into_received_file.sql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/IT/OM/spark_insert_it_om_apgl_into_received_file.sql"
