--- a/PROD/CONF/MONITORING/compute_spark_others_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_others_missing_files.conf
@@ -34,6 +34,13 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_missing_files.hql"
 flux.inline.exec-queries += "DELETE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE = '###SLICE_VALUE###' AND TABLE_SOURCE <>'IN'"
+
+flux.inline.exec-queries +="INSERT INTO TMP.MISSING_FILES2 VALUES('0','0','0','0','2020-02-03 00:00:00','###SLICE_VALUE###')"
+flux.inline.exec-queries +="ALTER TABLE TMP.MISSING_FILES2 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.exec-queries +="INSERT INTO TMP.MISSING_FILES2 SELECT * FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE = '###SLICE_VALUE###' AND TABLE_SOURCE ='IN'"
+flux.inline.exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES VALUES('0','0','0','0','2020-02-03 00:00:00','###SLICE_VALUE###')"
+flux.inline.exec-queries +="ALTER TABLE MON.SPARK_MISSING_FILES DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE_FROM_INTERVALE"
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
