--- a/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
@@ -44,7 +44,7 @@ flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_IN
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_missing_extract_files.hql"
 flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
 flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FOM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
 flux.inline.post-exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('EXTRACT','NORMAL','OK','OM_APGL','0','2020-01-25 01:40:55','###SLICE_VALUE###')"
 flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
 
