--- a/PROD/CONF/MONITORING/compute_spark_others_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_others_missing_files.conf
@@ -46,6 +46,6 @@ flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_IN
 
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_missing_others_files.hql"
 flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS2 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2 SELECT * FOM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'OTHERS'"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'OTHERS'"
 flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
 flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS2 UNION ALL SELECT 'OTHERS' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
