--- a/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
+++ b/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
@@ -26,13 +26,15 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/validate_t
 
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "set hive.enforce.bucketing=true"
+flux.inline.exec-queries += "set hive.enforce.bucketing=false"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_spark_ft_om_bicec_transaction.hql"
+
+flux.inline.exec-queries += "INSERT INTO TMP.TTVMW_OM_BICEC_TRANS VALUES('0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','2020-02-02 00:00:00','###SLICE_VALUE###')"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/truncate_tt.hql"
 
