--- a/PROD/CONF/OM/load-spark-it-omny-account-snapshot-subscribers.conf
+++ b/PROD/CONF/OM/load-spark-it-omny-account-snapshot-subscribers.conf
@@ -1,30 +1,29 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 
 flux.spark.setup-conf = []
 
 flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition","value": "true"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "true"}
 
-
-flux.spark.setup-var +=  {"key": "date_offset","value": 3}
-
-flux.name = "LOAD_SPARK_IT_OMNY_OPERATOR_BALANCE"
+flux.name = "LOAD_SPARK_IT_OMNY_ACCOUNT_SNAPSHOT_SUBSCRIBER"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/ACCOUNTS_WITHOUT_MSISDN/accounts_without_msisdn*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/ACCOUNTS_WITHOUT_MSISDN"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/SUBSCRIBERS_EXTRACT/subscribers_extract*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/SUBSCRIBERS_EXTRACT"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/ACCOUNTS_WITHOUT_MSISDN/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/ACCOUNTS_WITHOUT_MSISDN"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/OM/SUBSCRIBERS_EXTRACT/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/OM/SUBSCRIBERS_EXTRACT"
 flux.hdfs.dest.has-sub-dir = false
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -37,6 +36,4 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_operator_balance.hql"
-
-
+flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_omny_account_snapshot_subscriber.hql"
