--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -1015,7 +1015,7 @@ crontasks +=
    {
      instanceId = "LOAD_SPARK_IT_OMNY_COMMISSION",
      cron = "30 15-59/30 * * * ?",
-     configFile = "PROD/CONF/OM/load-spark-it-omny-Commission.conf",
+     configFile = "/PROD/CONF/OM/load-spark-it-omny-Commission.conf",
      taskType = "BATCH"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "40 minutes"
@@ -1235,5 +1235,29 @@ crontasks +=
      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
      , {"param" : "--conf spark.network.timeout=360s"}
      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_OMNY_COMMISSION_DETAILS",
+    cron = "30 15-59/30 * * * ?",
+    configFile = "/PROD/CONF/OM/load-spark-it-omny-Commission_Details.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
