correction de ft_a_vas_revenue_daily

--- a/PROD/CONF/FT_A_GPRS_LOCATION/load-spark-ft-a-gprs-location.conf
+++ b/PROD/CONF/FT_A_GPRS_LOCATION/load-spark-ft-a-gprs-location.conf
@@ -13,13 +13,13 @@ flux.name = "LOAD_SPARK_FT_A_GPRS_LOCATION"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "MONTHLY"
+flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -14
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-date-format = "yyyy-MM"
+flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
