--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-day.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-day.conf
@@ -32,7 +32,7 @@ flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/prequery_spark_ft_client_site_traffic_day.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
-flux.inline.exec-queries += "DROP TEMPORARY FUNCTION  EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF  EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
