--- a/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
@@ -42,10 +42,10 @@ flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
 
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_missing_extract_files.hql"
-flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
-flux.inline.post-exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('EXTRACT','NORMAL','OK','OM_APGL','0','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
+flux.inline.exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('EXTRACT','NORMAL','OK','OM_APGL','0','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
 
-flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS3 UNION ALL SELECT 'EXTRACT' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
+flux.inline.exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS3 UNION ALL SELECT 'EXTRACT' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
