--- a/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
+++ b/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
@@ -7,9 +7,6 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
 
-
-
-
 flux.name = "LOAD_SPARK_FT_OM_BICEC_TRANSACTION"
 
 flux.has-date-processing = true
@@ -26,15 +23,15 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_spark_ft_om_bicec_transaction.hql"
-
-flux.inline.exec-queries += "INSERT INTO TMP.TTVMW_OM_BICEC_TRANS VALUES('0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','2020-02-02 00:00:00','###SLICE_VALUE###')"
-
-flux.inline.exec-queries += "ALTER TABLE TRUNCATE TMP.TTVMW_OM_BICEC_TRANS DROP  PARTITION (event_date = ###SLICE_VALUE###)"
-
-flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_spark_ttvmw_om_bicec_trans.hql"
-
+//flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_spark_ft_om_bicec_transaction.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/validate_ttvmw_om_bicec_trans.hql"
+
+//flux.inline.exec-queries += "INSERT INTO TMP.TTVMW_OM_BICEC_TRANS VALUES('0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','2020-02-02 00:00:00','###SLICE_VALUE###')"
+//
+//flux.inline.exec-queries += "ALTER TABLE TRUNCATE TMP.TTVMW_OM_BICEC_TRANS DROP  PARTITION (event_date = ###SLICE_VALUE###)"
+
+//flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_spark_ttvmw_om_bicec_trans.hql"
+
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_spark_ft_om_bicec_transaction.hql"
 
