--- a/PROD/CONF/SPOOL/load-spark-spool-om-bicec-trans-reconciliation.conf
+++ b/PROD/CONF/SPOOL/load-spark-spool-om-bicec-trans-reconciliation.conf
@@ -11,7 +11,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_SPOOL_CX"
+flux.name = "LOAD_SPARK_SPOOL_OM_BICEC_TRANS_RECONCILIATION"
 
 flux.has-date-processing = true
 
@@ -27,6 +27,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/prequery_spool_cx.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/prequery_spool_om_bicec_trans_reconciliation.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/SPOOL/compute_and_insert_into_spool_cx.hql"
+flux.exec-queries += "/PROD/SCRIPTS/SPOOL/compute_and_insert_insert_into_spool_om_bicec_trans_reconciliation.hql"
