Calcul des tables DA_USA_DAILY

--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-data-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-data-da-usage-daily.conf
@@ -23,7 +23,7 @@ flux.name = "LOAD_SPARK_FT_TEST_DA_USAGE_DAILY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -31
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -32,9 +32,9 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_ft_data_da_usage_daily.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_spark_ft_data_da_usage_daily.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
