--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -274,20 +274,20 @@ crontasks +=
     ]
   }
 
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CLIENT_SITE_TRAFFIC_DAY",
-    cron = "0 32 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CLIENT_SITE_TRAFFIC_DAY",
+//    cron = "0 32 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //crontasks +=
