--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -260,19 +260,19 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_LAST_UPDATE_EC_EXTRACT",
-    cron = "0 28 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-last-update-ec-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_LAST_UPDATE_EC_EXTRACT",
+//    cron = "0 28 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-last-update-ec-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //
 //crontasks +=
