changement de la logique de ft imei online

--- a/PROD/CONF/FT_IMEI_ONLINE/load-spark-ft-imei-online.conf
+++ b/PROD/CONF/FT_IMEI_ONLINE/load-spark-ft-imei-online.conf
@@ -28,13 +28,17 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/prequery_spark_ft_imei_online.hql"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_IMEI_ONLINE"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_ft_imei_online_GPRS_POST.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_ft_imei_online_OTARIE.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_ft_imei_online_GPRS.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_ft_imei_online_MSC.hql"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_CRA_GPRS_POST_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_OTARIE_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_GPRS_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_MSC_IMEI_ONLINE"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_tt_imei_online_GPRS_POST.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_tt_imei_online_OTARIE.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_tt_imei_online_GPRS.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_tt_imei_online_MSC.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_ONLINE/compute_and_insert_spark_ft_imei_online.hql"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_IMEI_ONLINE"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_CRA_GPRS_POST_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_OTARIE_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_GPRS_IMEI_ONLINE"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_MSC_IMEI_ONLINE"
 
