--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -259,19 +259,19 @@ cronmanagerId = "002"
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_IMEI_ONLINE",
-    cron = "0 15 */1 * * ?",
-    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_IMEI_ONLINE",
+//    cron = "0 15 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
