update script for AMN

--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
@@ -11,7 +11,7 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode", "value": "nonstrict"}
 
-
+flux.name = "LOAD_SPARK_FT_AMN_LOCAL_TRAFFIC_DAY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
