--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
@@ -32,7 +32,7 @@ flux.has-post-queries = true
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_spark_ft_voice_sms_da_usage_daily.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP TEMPORARY FUNCTION EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/compute_and_insert_into_spark_ft_voice_sms_da_usage_daily.hql"
