bascule de LOAD_SPARK_FT_DATA_CONSO_MSISDN_DAY

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -174,7 +174,7 @@ cronmanagerId = "002"
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "65 minutes"
 //    extraTaskParams : [
-/ /     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -902,19 +902,19 @@ crontasks +=
 //  }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_GROUP_DISCONNECT_DAY",
-    cron = "0 51 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-disconnect-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_GROUP_DISCONNECT_DAY",
+//    cron = "0 51 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-disconnect-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //crontasks +=
@@ -1071,17 +1071,17 @@ crontasks +=
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
-  
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA_DA_USAGE_DAILY",
-    cron = "0 0 12 * * ?",
-    configFile = "/PROD/CONF/CLIENT360/load-ft-msisdn-premium-month.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA_DA_USAGE_DAILY",
+//    cron = "0 0 12 * * ?",
+//    configFile = "/PROD/CONF/CLIENT360/load-ft-msisdn-premium-month.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
