--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -95,19 +95,19 @@ cronmanagerId = "008"
 
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_TEST_DA_USAGE_DAILY",
-    cron = "0 10 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_TEST_DA_USAGE_DAILY",
+//    cron = "0 10 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-data-da-usage-daily.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -417,19 +417,19 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA_CONSO_MSISDN_DAY",
-    cron = "0 55 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-data-conso-msisdn-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA_CONSO_MSISDN_DAY",
+//    cron = "0 55 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-data-conso-msisdn-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //crontasks +=
 //  {
@@ -474,19 +474,19 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CELL_TRAFIC_DAYLY",
-    cron = "0 48 */1 * * ?",
-    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-ft-cell-trafic-dayly.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CELL_TRAFIC_DAYLY",
+//    cron = "0 48 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-ft-cell-trafic-dayly.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //crontasks +=
 //  {
