correction du probleme dans compute cron task

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -687,7 +687,7 @@ cronmanagerId = "002"
 
 
 
- CALCUL DES FICHIERS MANQUANTS EXTRACT
+//CALCUL DES FICHIERS MANQUANTS EXTRACT
 crontasks +=
   {
     instanceId = "COMPUTE_EXTRACT_MISSING_FILES",
@@ -703,7 +703,7 @@ crontasks +=
   }
 
 
- CALCUL DES FICHIERS MANQUANTS OTHERS
+//CALCUL DES FICHIERS MANQUANTS OTHERS
 crontasks +=
   {
     instanceId = "COMPUTE_OTHERS_MISSING_FILES",
@@ -837,9 +837,8 @@ crontasks +=
 
 
 
- MONITORING
-
- CALCUL DES FICHIERS MANQUANTS IN
+// MONITORING
+//CALCUL DES FICHIERS MANQUANTS IN
 crontasks +=
   {
     instanceId = "COMPUTE_IN_ZTE_MISSING_FILES",
