correct when investigate

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -754,19 +754,19 @@ crontasks +=
 //  }
 
 // COMPUTE STATISTICS
-crontasks +=
-  {
-    instanceId = "ANALYZE_COMPUTE_STATISTICS",
-    cron = "0 42 0 */1 * ?",
-    configFile = "/PROD/CONF/analyze_compute_statistics.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "ANALYZE_COMPUTE_STATISTICS",
+//    cron = "0 42 0 */1 * ?",
+//    configFile = "/PROD/CONF/analyze_compute_statistics.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
