Ajout de la config du port Spark dans les fichiers des Jobs, correction des erreurs

--- a/PROD/CONF/IN_ZTE/FT/CLIENT360/load-spark-ft-data-conso-msisdn-month.conf
+++ b/PROD/CONF/IN_ZTE/FT/CLIENT360/load-spark-ft-data-conso-msisdn-month.conf
@@ -1,7 +1,6 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-
 flux.input-type = "HIVE" // Possible values are HDFS, HIVE
 flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
 
@@ -9,11 +8,8 @@ flux.spark.setup-conf = []
 
 flux.setup-conf = []
 
-
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
-
 
 flux.name = "LOAD_SPARK_FT_DATA_CONSO_MSISDN_MONTH"
 
@@ -32,7 +28,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_IMEI_TRAFFIC_MONTHLY/prequery_spark_ft_imei_traffic_monthly.hql"
-
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/prequery_spark_ft_data_conso_msisdn_month.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -41,16 +37,14 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_DATA_CONSO_MSISDN_MONTH"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/prequery_ft_data_conso_msisdn_month.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_ft_data_conso_msisdn_month.hql"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_DATA_CONSO_MSISDN_MONTH"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_tt_data_conso_msisdn_month_part1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_ft_data_conso_msisdn_month_part2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_spark_tt_data_conso_msisdn_month.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_spark_ft_data_conso_msisdn_month.hql"
 
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_DATA_CONSO_MSISDN_MONTH"
 
-
-flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_IMEI_TRAFFIC_MONTHLY/compute_and_insert_into_spark_ft_imei_traffic_monthly.hql"
-
-
-
+//flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_ft_data_conso_msisdn_month.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_tt_data_conso_msisdn_month_part1.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_CONSO_MSISDN_MONTH/compute_ft_data_conso_msisdn_month_part2.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_IMEI_TRAFFIC_MONTHLY/compute_and_insert_into_spark_ft_imei_traffic_monthly.hql"
