--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -460,19 +460,19 @@ cronmanagerId = "008"
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA_CONSO_MSISDN_MONTH",
-    cron = "0 58 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft_data-conso-msisdn-month.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA_CONSO_MSISDN_MONTH",
+//    cron = "0 58 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft_data-conso-msisdn-month.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //crontasks +=
 //  {
