update conf for global activity status

--- a/PROD/CONF/MONITORING/compute_spark_global_activity_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_spark_global_activity_daily_status.conf
@@ -30,7 +30,7 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_global_activity_daily_status.hql"
-
+flux.inline.exec-queries+= "INSERT INTO MON.SPARK_GLOBAL_ACTIVITY_DAILY_STATUS  VALUES('FT_A_DATA_TRANSFER','25535','2019-07-25 14:04:53.776','###SLICE_VALUE###')"
 flux.inline.exec-queries += "ALTER TABLE MON.SPARK_GLOBAL_ACTIVITY_DAILY_STATUS DROP PARTITION(TRANSACTION_DATE ='###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_global_activity_daily_status.hql"
 
