update script and conf for ft

--- a/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
@@ -14,7 +14,7 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_ADJUSTMENT_CDR"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "7"}
 flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_ADJUSTMENT"}
-flux.spark.setup-var +=  {"key": "it_partition_column","value": "CREATE_DATE"}
+flux.spark.setup-var +=  {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
 
