--- a/PROD/CONF/OM/load-spark-it-om-apgl.conf
+++ b/PROD/CONF/OM/load-spark-it-om-apgl.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_IT_OM_APGL"
+flux.name = "LOAD_SPARK_IT_OM_APGL"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
