update conf for voice_sms and data

--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
@@ -19,8 +19,8 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/prequery_ft_voice_sms.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/prequery_spark_ft_voice_sms.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -30,7 +30,7 @@ flux.inline.exec-queries += "ADD JAR hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN as 'cm.orange.bigdata.udf.GetNnpMsisdn'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_ft_billed_transaction_prepaid.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_spark_ft_billed_transaction_prepaid.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
@@ -38,8 +38,8 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_VOICE_SMS"
-flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.SPARK_IT_ZTE_VOICE_SMS"
+flux.hive.extra-conf += "--hivevar it_partition_column=FILE_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=30"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
@@ -48,7 +48,7 @@ flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 flux.hive.extra-conf += "--hivevar table_type=FT"
 flux.hive.extra-conf += "--hivevar table_name=FT_BILLED_TRANSACTION_PREPAID"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_BILLED_TRANSACTION_PREPAID"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.SPARK_FT_BILLED_TRANSACTION_PREPAID"
 flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
 
 
