--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -35,35 +35,35 @@ cronmanagerId = "002"
 //  }
 
 // Chargement FT IN ZTE VOICE_SMS
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_VOICE_SMS",
-//    cron = "0 1 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "65 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_VOICE_SMS",
+    cron = "0 1 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "120 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
-// Chargement FT IN ZTE DATA
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_DATA",
-//    cron = "0 2 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "65 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+ //Chargement FT IN ZTE DATA
+crontasks +=
+  {
+    instanceId = "LOAD_FT_DATA",
+    cron = "0 2 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
