FT_ACTIVATION_MONTH migration

--- a/PROD/CONF/FT_ACTIVATION_MONTH/load-spark-ft-activation-month.conf
+++ b/PROD/CONF/FT_ACTIVATION_MONTH/load-spark-ft-activation-month.conf
@@ -10,11 +10,11 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
 flux.spark.setup-var +=  {"key": "date_offset","value": "90"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
-flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_ACTIVATIONS_LOCATION"}
-flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_ACTIVATIONS_LOCATION"}
-flux.spark.setup-var +=  {"key": "table_partition","value": "TRANSACTION_DATE"}
+flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_ACTIVATION_MONTH"}
+flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_ACTIVATION_MONTH"}
+flux.spark.setup-var +=  {"key": "table_partition","value": "EVENT_MONTH"}
 
-flux.name = "LOAD_SPARK_FT_ACTIVATIONS_LOCATION"
+flux.name = "LOAD_SPARK_FT_ACTIVATION_MONTH"
 
 flux.has-date-processing = true
 
@@ -30,7 +30,7 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_ACTIVATIONS_LOCATION/prequery_spark_ft_activations_location.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_ACTIVATION_MONTH/prequery_spark_ft_activation_month.hql"
 
 flux.inline.exec-queries += "set hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
@@ -41,4 +41,4 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_ACTIVATIONS_LOCATION/compute_and_insert_into_spark_ft_activations_location.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_ACTIVATION_MONTH/compute_and_insert_into_spark_ft_activation_month.hql"
