SPARK_FT_ACTIVATION_MONTH migration

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -2300,7 +2300,7 @@ crontasks +=
       crontasks +=
     {
       instanceId = "LOAD_SPARK_FT_ACTIVATION_MONTH",
-      cron = "59 59 23 * * ?",
+      cron = "0 50 */1 * * ?",
       configFile = "/PROD/CONF/FT_ACTIVATION_MONTH/load-spark-ft-activation-month.conf",
       taskType = "BATCH"
       taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
