migration ft_imei_transaction(qualif), ft_datamart_om_daily(OK) et ft_datamart_om_trans(ok), ft_marketing_datamart & ft_marketing_datamart_month(qualitf)

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -996,20 +996,20 @@ crontasks +=
 //    }
 
 
-
-crontasks +=
-{
-      instanceId = "UPDATE_DT_BASE_IDENTIFICATION",
-      cron = "0 57 */1 * * ?",
-      configFile = "/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf",
-      taskType = "HIVE"
-      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-      timeout = "60 minutes"
-      extraTaskParams : [
-        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-      ]
-    }
+//
+//crontasks +=
+//{
+//      instanceId = "UPDATE_DT_BASE_IDENTIFICATION",
+//      cron = "0 57 */1 * * ?",
+//      configFile = "/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf",
+//      taskType = "HIVE"
+//      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//      timeout = "60 minutes"
+//      extraTaskParams : [
+//        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//      ]
+//    }
 
 
 //crontasks +=
