Ajout des fichiers de scripts et conf du recyclage et modification de l'equation prépayée et mise à jour de certains spoop export

--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
@@ -32,7 +32,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM AGG.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -40,7 +40,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT TRANSACTION_HOUR,OFFER_PROFILE_CODE ,SERVICE_CODE ,DESTINATION ,CALL_DESTINATION_CODE ,OTHER_PARTY_ZONE ,SPECIFIC_TARIFF_INDICATOR ,CITYZONE_NUMBER ,TVA ,TOTAL_COUNT ,RATED_TOTAL_COUNT ,DURATION ,RATED_DURATION ,MAIN_RATED_AMOUNT ,PROMO_RATED_AMOUNT ,RATED_AMOUNT ,MAIN_DISCARDED_CREDIT ,PROMO_DISCARDED_CREDIT ,SMS_DISCARDED_VOLUME ,SMS_USED_VOLUME ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SUB_SERVICE ,SERVED_SERVICE ,OTHER_PARTY_PRESENT ,CREDIT_AMOUNT ,DEBIT_AMOUNT ,TARIFF_PLAN ,PROMO_RATED_AMOUNT_PROMO ,PROMO_RATED_AMOUNT_ONNET ,PROMO_RATED_AMOUNT_XPRESS ,RATED_AMOUNT_DETAILS ,OPERATOR_CODE ,TIME_USED_VOLUME ,BUNDLE_SMS_USED_VOLUME ,TRANSACTION_DATE FROM AGG.FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_HOUR, OFFER_PROFILE_CODE ,SERVICE_CODE ,DESTINATION ,CALL_DESTINATION_CODE ,OTHER_PARTY_ZONE ,SPECIFIC_TARIFF_INDICATOR, CITYZONE_NUMBER,TVA ,sum(TOTAL_COUNT) TOTAL_COUNT ,sum(RATED_TOTAL_COUNT) RATED_TOTAL_COUNT ,sum(DURATION) DURATION ,sum(RATED_DURATION) RATED_DURATION , sum(MAIN_RATED_AMOUNT) MAIN_RATED_AMOUNT, sum(PROMO_RATED_AMOUNT) PROMO_RATED_AMOUNT , sum(RATED_AMOUNT) RATED_AMOUNT, sum(MAIN_DISCARDED_CREDIT) MAIN_DISCARDED_CREDIT , sum(PROMO_DISCARDED_CREDIT)PROMO_DISCARDED_CREDIT ,sum(SMS_DISCARDED_VOLUME)SMS_DISCARDED_VOLUME ,sum(SMS_USED_VOLUME)SMS_USED_VOLUME ,SOURCE_PLATFORM ,SOURCE_DATA, current_timestamp INSERT_DATE ,SUB_SERVICE ,SERVED_SERVICE , OTHER_PARTY_PRESENT ,sum(CREDIT_AMOUNT) CREDIT_AMOUNT ,sum(DEBIT_AMOUNT)DEBIT_AMOUNT ,TARIFF_PLAN ,sum(PROMO_RATED_AMOUNT_PROMO)PROMO_RATED_AMOUNT_PROMO ,sum(PROMO_RATED_AMOUNT_ONNET)PROMO_RATED_AMOUNT_ONNET,sum(PROMO_RATED_AMOUNT_XPRESS) PROMO_RATED_AMOUNT_XPRESS, RATED_AMOUNT_DETAILS, OPERATOR_CODE, sum(TIME_USED_VOLUME) TIME_USED_VOLUME ,sum(BUNDLE_SMS_USED_VOLUME)BUNDLE_SMS_USED_VOLUME FROM AGG.SPARK_FT_GSM_TRAFFIC_REVENUE_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###' group by TRANSACTION_DATE, TRANSACTION_HOUR, OFFER_PROFILE_CODE ,SERVICE_CODE ,DESTINATION ,CALL_DESTINATION_CODE ,OTHER_PARTY_ZONE ,SPECIFIC_TARIFF_INDICATOR ,CITYZONE_NUMBER, TVA, SOURCE_DATA, SOURCE_PLATFORM, SERVED_SERVICE, SUB_SERVICE, OTHER_PARTY_PRESENT, OPERATOR_CODE, RATED_AMOUNT_DETAILS, TARIFF_PLAN"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GSM_TF_REV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REV_DAILY"
