nettoyage -R spark_ft_msc_transaction et spark_ft_cra_gprs

--- a/PROD/CONF/FT_EMEI_TRANSACTION/load-spark-ft-emei-transaction.conf
+++ b/PROD/CONF/FT_EMEI_TRANSACTION/load-spark-ft-emei-transaction.conf
@@ -31,16 +31,17 @@ flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/prequery_spark_ft_emei_transaction.hql"
 
-flux.inline.exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION"
-flux.inline.exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION_2"
-flux.inline.exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION_3"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_emei_transaction1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_emei_transaction2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_emei_transaction3_1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_emei_transaction3_2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_emei_transaction4.hql"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
 
-flux.inline.post-exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION_2"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TT.SPARK_FT_IMEI_TRANSACTION_3"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction1.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction3_1.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction3_2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction4.hql"
+
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
 
