ajout dans les fichiers de configurations crontask spark compute et sqoop

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -201,3 +201,20 @@ crontasks +=
       //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
     ]
   }
+
+//  EXPORT sqoop-export-spark-fta-msisdn-recyclage.conf
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_A_MSISDN_RECYCLAGE",
+    cron = "0 */10 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-msisdn-recyclage.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
+
